[gd_scene load_steps=11 format=3 uid="uid://j187nujlnd02"]

[ext_resource type="Script" uid="uid://biuupaygfuivd" path="res://Scripts/Nachos/nacho_tortilla.gd" id="1_qm3u6"]
[ext_resource type="Texture2D" uid="uid://dd4p6yhgvu67s" path="res://Assets/backgroundcool.png" id="2_gasrt"]
[ext_resource type="Texture2D" uid="uid://bbeujd8ov4tx2" path="res://Assets/tort1.png" id="3_8gtl7"]
[ext_resource type="PackedScene" uid="uid://gk1lglu6jxso" path="res://Scenes/timer.tscn" id="3_gasrt"]
[ext_resource type="Texture2D" uid="uid://cjgauk2jecmct" path="res://Assets/tort2.png" id="4_3qsx8"]
[ext_resource type="Texture2D" uid="uid://7eqvsn50cymj" path="res://Assets/tort3.png" id="5_up1aj"]
[ext_resource type="Texture2D" uid="uid://ba668mlx1eae5" path="res://Assets/tort4.png" id="6_0kuia"]
[ext_resource type="Texture2D" uid="uid://wh7nusjdavmy" path="res://Assets/tort5.png" id="7_ivwqo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qm3u6"]
size = Vector2(48, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gasrt"]
size = Vector2(192, 192)

[node name="nacho_tortilla" type="Node2D"]
script = ExtResource("1_qm3u6")

[node name="Background" type="Sprite2D" parent="."]
scale = Vector2(0.4, 0.351563)
texture = ExtResource("2_gasrt")
centered = false

[node name="Tortilla1" type="Node2D" parent="."]
visible = false

[node name="toirtilla" type="Sprite2D" parent="Tortilla1"]
position = Vector2(320, 256)
scale = Vector2(0.36083, 0.36083)
texture = ExtResource("3_8gtl7")

[node name="Line2D" type="Line2D" parent="Tortilla1"]
points = PackedVector2Array(312, 184, 328, 184, 320, 184, 320, 328, 328, 312, 320, 328, 315.483, 318.967, 312, 312)
width = 3.0
default_color = Color(0, 0, 0, 1)

[node name="Start" type="Area2D" parent="Tortilla1"]
position = Vector2(320, 184)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tortilla1/Start"]
shape = SubResource("RectangleShape2D_qm3u6")

[node name="Middle" type="Area2D" parent="Tortilla1"]
position = Vector2(320, 256)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tortilla1/Middle"]
shape = SubResource("RectangleShape2D_gasrt")

[node name="End" type="Area2D" parent="Tortilla1"]
position = Vector2(320, 328)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tortilla1/End"]
shape = SubResource("RectangleShape2D_qm3u6")

[node name="Tortilla2" type="Node2D" parent="."]
visible = false

[node name="toirtilla" type="Sprite2D" parent="Tortilla2"]
position = Vector2(320, 256)
scale = Vector2(0.36083, 0.36083)
texture = ExtResource("4_3qsx8")

[node name="Start" type="Area2D" parent="Tortilla2"]
position = Vector2(240, 256)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tortilla2/Start"]
shape = SubResource("RectangleShape2D_qm3u6")

[node name="Middle" type="Area2D" parent="Tortilla2"]
position = Vector2(320, 256)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tortilla2/Middle"]
shape = SubResource("RectangleShape2D_gasrt")

[node name="End" type="Area2D" parent="Tortilla2"]
position = Vector2(400, 256)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tortilla2/End"]
shape = SubResource("RectangleShape2D_qm3u6")

[node name="Line2D" type="Line2D" parent="Tortilla2"]
points = PackedVector2Array(240, 264, 240, 248, 240, 256, 400, 256, 392, 248, 400, 256, 392, 264)
width = 3.0
default_color = Color(0, 0, 0, 1)

[node name="Tortilla3" type="Node2D" parent="."]
visible = false

[node name="toirtilla" type="Sprite2D" parent="Tortilla3"]
position = Vector2(368, 256)
scale = Vector2(0.36083, 0.36083)
texture = ExtResource("5_up1aj")

[node name="Line2D" type="Line2D" parent="Tortilla3"]
points = PackedVector2Array(256, 208, 264, 200, 272, 192, 264, 200, 376, 312, 376, 304, 376, 312, 368, 312)
width = 3.0
default_color = Color(0, 0, 0, 1)

[node name="Start" type="Area2D" parent="Tortilla3"]
position = Vector2(263.444, 199.419)
rotation = 0.785614

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tortilla3/Start"]
shape = SubResource("RectangleShape2D_qm3u6")

[node name="Middle" type="Area2D" parent="Tortilla3"]
position = Vector2(320, 256)
rotation = 0.785614

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tortilla3/Middle"]
shape = SubResource("RectangleShape2D_gasrt")

[node name="End" type="Area2D" parent="Tortilla3"]
position = Vector2(376.556, 312.581)
rotation = 0.785614

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tortilla3/End"]
shape = SubResource("RectangleShape2D_qm3u6")

[node name="Tortilla4" type="Node2D" parent="."]
visible = false

[node name="toirtilla" type="Sprite2D" parent="Tortilla4"]
position = Vector2(320, 256)
scale = Vector2(0.36083, 0.36083)
texture = ExtResource("6_0kuia")

[node name="Line2D" type="Line2D" parent="Tortilla4"]
points = PackedVector2Array(368, 192, 384, 208, 376, 200, 264, 312, 264, 304, 264, 312, 272, 312)
width = 3.0
default_color = Color(0, 0, 0, 1)

[node name="Start" type="Area2D" parent="Tortilla4"]
position = Vector2(376.553, 199.416)
rotation = 2.35592

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tortilla4/Start"]
shape = SubResource("RectangleShape2D_qm3u6")

[node name="Middle" type="Area2D" parent="Tortilla4"]
position = Vector2(320, 256)
rotation = 2.35592

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tortilla4/Middle"]
position = Vector2(-3.8147e-06, 5.48363e-06)
shape = SubResource("RectangleShape2D_gasrt")

[node name="End" type="Area2D" parent="Tortilla4"]
position = Vector2(263.447, 312.584)
rotation = 2.35592

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tortilla4/End"]
shape = SubResource("RectangleShape2D_qm3u6")

[node name="Tortilla5" type="Node2D" parent="."]
visible = false

[node name="toirtilla" type="Sprite2D" parent="Tortilla5"]
position = Vector2(320, 256)
scale = Vector2(0.36083, 0.36083)
texture = ExtResource("7_ivwqo")

[node name="Knifemark" type="Line2D" parent="."]
points = PackedVector2Array(320, 184)

[node name="Timer" parent="." instance=ExtResource("3_gasrt")]
time = 20

[connection signal="input_event" from="Tortilla1/Start" to="." method="_on_start_input_event"]
[connection signal="mouse_exited" from="Tortilla1/Middle" to="." method="_on_middle_mouse_exited"]
[connection signal="input_event" from="Tortilla1/End" to="." method="_on_end_input_event"]
[connection signal="input_event" from="Tortilla2/Start" to="." method="_on_start_input_event"]
[connection signal="mouse_exited" from="Tortilla2/Middle" to="." method="_on_middle_mouse_exited"]
[connection signal="input_event" from="Tortilla2/End" to="." method="_on_end_input_event"]
[connection signal="input_event" from="Tortilla3/Start" to="." method="_on_start_input_event"]
[connection signal="mouse_exited" from="Tortilla3/Middle" to="." method="_on_middle_mouse_exited"]
[connection signal="input_event" from="Tortilla3/End" to="." method="_on_end_input_event"]
[connection signal="input_event" from="Tortilla4/Start" to="." method="_on_start_input_event"]
[connection signal="mouse_exited" from="Tortilla4/Middle" to="." method="_on_middle_mouse_exited"]
[connection signal="input_event" from="Tortilla4/End" to="." method="_on_end_input_event"]
[connection signal="time_done" from="Timer" to="." method="_on_timer_time_done"]
